2009/09/30 Luigi Rucco <l.rucco@gmail.com>
	* Deleted useless files and directories 

2009/09/24 Simone Corbetta <simone.corbetta@gmail.com>
	* Added documentation support (doxygen)

2009/09/24 Simone Corbetta <simone.corbetta@gmail.com>
	* Some documents added
	* Minor modifications

2009/09/24 Simone Corbetta <simone.corbetta@gmail.com>
	* Some bug fixes today (different commits allow for specific revision
	  checkout, for flexibility)
	* Test applications under 'test' directory have been removed

2009/09/24 Simone Corbetta <simone.corbetta@gmail.com>
	* Deleted some unnecessary files 
	* Updated some configure and makefiles

12-07-03: Moving to automake system so we need this file. 