@@ -1,9 +1,9 @@
 #############################################################################
 # Makefile for building: bin/WASP_dynamic_linker
-# Generated by qmake (2.01a) (Qt 4.5.2) on: Thu Sep 10 08:59:14 2009
+# Generated by qmake (2.01a) (Qt 4.5.0) on: mer set 30 10:27:42 2009
 # Project:  WASP_dynamic_linker.pro
 # Template: app
-# Command: /usr/local/Trolltech/Qt-4.5.2/bin/qmake -unix -after  CONFIG+=release -o Makefile WASP_dynamic_linker.pro
+# Command: /usr/bin/qmake-qt4 -unix -after  CONFIG+=release -o Makefile WASP_dynamic_linker.pro
 #############################################################################
 
 ####### Compiler, tools and options
@@ -13,13 +13,13 @@ CXX           = g++
 DEFINES       = -DQT_NO_DEBUG -DQT_GUI_LIB -DQT_CORE_LIB -DQT_SHARED
 CFLAGS        = -pipe -O2 -Wall -W -D_REENTRANT $(DEFINES)
 CXXFLAGS      = -pipe -O2 -Wall -W -D_REENTRANT $(DEFINES)
-INCPATH       = -I/usr/local/Trolltech/Qt-4.5.2/mkspecs/linux-g++ -I. -I/usr/local/Trolltech/Qt-4.5.2/include/QtCore -I/usr/local/Trolltech/Qt-4.5.2/include/QtGui -I/usr/local/Trolltech/Qt-4.5.2/include -Ibuild -Ibuild
+INCPATH       = -I/usr/share/qt4/mkspecs/linux-g++ -I. -I/usr/include/qt4/QtCore -I/usr/include/qt4/QtGui -I/usr/include/qt4 -Ibuild -Ibuild
 LINK          = g++
-LFLAGS        = -Wl,-O1 -Wl,-rpath,/usr/local/Trolltech/Qt-4.5.2/lib
-LIBS          = $(SUBLIBS)  -L/usr/local/Trolltech/Qt-4.5.2/lib -lQtGui -L/usr/local/Trolltech/Qt-4.5.2/lib -L/usr/X11R6/lib -pthread -lpng -lfreetype -lSM -lICE -pthread -pthread -lXrender -lfontconfig -lXext -lX11 -lQtCore -lz -lm -pthread -lgthread-2.0 -lrt -lglib-2.0 -ldl -lpthread
+LFLAGS        = -Wl,-O1
+LIBS          = $(SUBLIBS)  -L/usr/lib -lQtGui -lQtCore -lpthread
 AR            = ar cqs
 RANLIB        = 
-QMAKE         = /usr/local/Trolltech/Qt-4.5.2/bin/qmake
+QMAKE         = /usr/bin/qmake-qt4
 TAR           = tar -cf
 COMPRESS      = gzip -9f
 COPY          = cp -f
@@ -59,24 +59,24 @@ OBJECTS       = build/mainwindowimpl.o \
 		build/elf.o \
 		build/wlf_loader.o \
 		build/moc_mainwindowimpl.o
-DIST          = /usr/local/Trolltech/Qt-4.5.2/mkspecs/common/g++.conf \
-		/usr/local/Trolltech/Qt-4.5.2/mkspecs/common/unix.conf \
-		/usr/local/Trolltech/Qt-4.5.2/mkspecs/common/linux.conf \
-		/usr/local/Trolltech/Qt-4.5.2/mkspecs/qconfig.pri \
-		/usr/local/Trolltech/Qt-4.5.2/mkspecs/features/qt_functions.prf \
-		/usr/local/Trolltech/Qt-4.5.2/mkspecs/features/qt_config.prf \
-		/usr/local/Trolltech/Qt-4.5.2/mkspecs/features/exclusive_builds.prf \
-		/usr/local/Trolltech/Qt-4.5.2/mkspecs/features/default_pre.prf \
-		/usr/local/Trolltech/Qt-4.5.2/mkspecs/features/release.prf \
-		/usr/local/Trolltech/Qt-4.5.2/mkspecs/features/default_post.prf \
-		/usr/local/Trolltech/Qt-4.5.2/mkspecs/features/warn_on.prf \
-		/usr/local/Trolltech/Qt-4.5.2/mkspecs/features/qt.prf \
-		/usr/local/Trolltech/Qt-4.5.2/mkspecs/features/unix/thread.prf \
-		/usr/local/Trolltech/Qt-4.5.2/mkspecs/features/moc.prf \
-		/usr/local/Trolltech/Qt-4.5.2/mkspecs/features/resources.prf \
-		/usr/local/Trolltech/Qt-4.5.2/mkspecs/features/uic.prf \
-		/usr/local/Trolltech/Qt-4.5.2/mkspecs/features/yacc.prf \
-		/usr/local/Trolltech/Qt-4.5.2/mkspecs/features/lex.prf \
+DIST          = /usr/share/qt4/mkspecs/common/g++.conf \
+		/usr/share/qt4/mkspecs/common/unix.conf \
+		/usr/share/qt4/mkspecs/common/linux.conf \
+		/usr/share/qt4/mkspecs/qconfig.pri \
+		/usr/share/qt4/mkspecs/features/qt_functions.prf \
+		/usr/share/qt4/mkspecs/features/qt_config.prf \
+		/usr/share/qt4/mkspecs/features/exclusive_builds.prf \
+		/usr/share/qt4/mkspecs/features/default_pre.prf \
+		/usr/share/qt4/mkspecs/features/release.prf \
+		/usr/share/qt4/mkspecs/features/default_post.prf \
+		/usr/share/qt4/mkspecs/features/warn_on.prf \
+		/usr/share/qt4/mkspecs/features/qt.prf \
+		/usr/share/qt4/mkspecs/features/unix/thread.prf \
+		/usr/share/qt4/mkspecs/features/moc.prf \
+		/usr/share/qt4/mkspecs/features/resources.prf \
+		/usr/share/qt4/mkspecs/features/uic.prf \
+		/usr/share/qt4/mkspecs/features/yacc.prf \
+		/usr/share/qt4/mkspecs/features/lex.prf \
 		WASP_dynamic_linker.pro
 QMAKE_TARGET  = WASP_dynamic_linker
 DESTDIR       = bin/
@@ -110,47 +110,47 @@ $(TARGET): build/ui_mainwindow.h $(OBJECTS)
 	@$(CHK_DIR_EXISTS) bin/ || $(MKDIR) bin/ 
 	$(LINK) $(LFLAGS) -o $(TARGET) $(OBJECTS) $(OBJCOMP) $(LIBS)
 
-Makefile: WASP_dynamic_linker.pro  /usr/local/Trolltech/Qt-4.5.2/mkspecs/linux-g++/qmake.conf /usr/local/Trolltech/Qt-4.5.2/mkspecs/common/g++.conf \
-		/usr/local/Trolltech/Qt-4.5.2/mkspecs/common/unix.conf \
-		/usr/local/Trolltech/Qt-4.5.2/mkspecs/common/linux.conf \
-		/usr/local/Trolltech/Qt-4.5.2/mkspecs/qconfig.pri \
-		/usr/local/Trolltech/Qt-4.5.2/mkspecs/features/qt_functions.prf \
-		/usr/local/Trolltech/Qt-4.5.2/mkspecs/features/qt_config.prf \
-		/usr/local/Trolltech/Qt-4.5.2/mkspecs/features/exclusive_builds.prf \
-		/usr/local/Trolltech/Qt-4.5.2/mkspecs/features/default_pre.prf \
-		/usr/local/Trolltech/Qt-4.5.2/mkspecs/features/release.prf \
-		/usr/local/Trolltech/Qt-4.5.2/mkspecs/features/default_post.prf \
-		/usr/local/Trolltech/Qt-4.5.2/mkspecs/features/warn_on.prf \
-		/usr/local/Trolltech/Qt-4.5.2/mkspecs/features/qt.prf \
-		/usr/local/Trolltech/Qt-4.5.2/mkspecs/features/unix/thread.prf \
-		/usr/local/Trolltech/Qt-4.5.2/mkspecs/features/moc.prf \
-		/usr/local/Trolltech/Qt-4.5.2/mkspecs/features/resources.prf \
-		/usr/local/Trolltech/Qt-4.5.2/mkspecs/features/uic.prf \
-		/usr/local/Trolltech/Qt-4.5.2/mkspecs/features/yacc.prf \
-		/usr/local/Trolltech/Qt-4.5.2/mkspecs/features/lex.prf \
-		/usr/local/Trolltech/Qt-4.5.2/lib/libQtGui.prl \
-		/usr/local/Trolltech/Qt-4.5.2/lib/libQtCore.prl
+Makefile: WASP_dynamic_linker.pro  /usr/share/qt4/mkspecs/linux-g++/qmake.conf /usr/share/qt4/mkspecs/common/g++.conf \
+		/usr/share/qt4/mkspecs/common/unix.conf \
+		/usr/share/qt4/mkspecs/common/linux.conf \
+		/usr/share/qt4/mkspecs/qconfig.pri \
+		/usr/share/qt4/mkspecs/features/qt_functions.prf \
+		/usr/share/qt4/mkspecs/features/qt_config.prf \
+		/usr/share/qt4/mkspecs/features/exclusive_builds.prf \
+		/usr/share/qt4/mkspecs/features/default_pre.prf \
+		/usr/share/qt4/mkspecs/features/release.prf \
+		/usr/share/qt4/mkspecs/features/default_post.prf \
+		/usr/share/qt4/mkspecs/features/warn_on.prf \
+		/usr/share/qt4/mkspecs/features/qt.prf \
+		/usr/share/qt4/mkspecs/features/unix/thread.prf \
+		/usr/share/qt4/mkspecs/features/moc.prf \
+		/usr/share/qt4/mkspecs/features/resources.prf \
+		/usr/share/qt4/mkspecs/features/uic.prf \
+		/usr/share/qt4/mkspecs/features/yacc.prf \
+		/usr/share/qt4/mkspecs/features/lex.prf \
+		/usr/lib/libQtGui.prl \
+		/usr/lib/libQtCore.prl
 	$(QMAKE) -unix -after  CONFIG+=release -o Makefile WASP_dynamic_linker.pro
-/usr/local/Trolltech/Qt-4.5.2/mkspecs/common/g++.conf:
-/usr/local/Trolltech/Qt-4.5.2/mkspecs/common/unix.conf:
-/usr/local/Trolltech/Qt-4.5.2/mkspecs/common/linux.conf:
-/usr/local/Trolltech/Qt-4.5.2/mkspecs/qconfig.pri:
-/usr/local/Trolltech/Qt-4.5.2/mkspecs/features/qt_functions.prf:
-/usr/local/Trolltech/Qt-4.5.2/mkspecs/features/qt_config.prf:
-/usr/local/Trolltech/Qt-4.5.2/mkspecs/features/exclusive_builds.prf:
-/usr/local/Trolltech/Qt-4.5.2/mkspecs/features/default_pre.prf:
-/usr/local/Trolltech/Qt-4.5.2/mkspecs/features/release.prf:
-/usr/local/Trolltech/Qt-4.5.2/mkspecs/features/default_post.prf:
-/usr/local/Trolltech/Qt-4.5.2/mkspecs/features/warn_on.prf:
-/usr/local/Trolltech/Qt-4.5.2/mkspecs/features/qt.prf:
-/usr/local/Trolltech/Qt-4.5.2/mkspecs/features/unix/thread.prf:
-/usr/local/Trolltech/Qt-4.5.2/mkspecs/features/moc.prf:
-/usr/local/Trolltech/Qt-4.5.2/mkspecs/features/resources.prf:
-/usr/local/Trolltech/Qt-4.5.2/mkspecs/features/uic.prf:
-/usr/local/Trolltech/Qt-4.5.2/mkspecs/features/yacc.prf:
-/usr/local/Trolltech/Qt-4.5.2/mkspecs/features/lex.prf:
-/usr/local/Trolltech/Qt-4.5.2/lib/libQtGui.prl:
-/usr/local/Trolltech/Qt-4.5.2/lib/libQtCore.prl:
+/usr/share/qt4/mkspecs/common/g++.conf:
+/usr/share/qt4/mkspecs/common/unix.conf:
+/usr/share/qt4/mkspecs/common/linux.conf:
+/usr/share/qt4/mkspecs/qconfig.pri:
+/usr/share/qt4/mkspecs/features/qt_functions.prf:
+/usr/share/qt4/mkspecs/features/qt_config.prf:
+/usr/share/qt4/mkspecs/features/exclusive_builds.prf:
+/usr/share/qt4/mkspecs/features/default_pre.prf:
+/usr/share/qt4/mkspecs/features/release.prf:
+/usr/share/qt4/mkspecs/features/default_post.prf:
+/usr/share/qt4/mkspecs/features/warn_on.prf:
+/usr/share/qt4/mkspecs/features/qt.prf:
+/usr/share/qt4/mkspecs/features/unix/thread.prf:
+/usr/share/qt4/mkspecs/features/moc.prf:
+/usr/share/qt4/mkspecs/features/resources.prf:
+/usr/share/qt4/mkspecs/features/uic.prf:
+/usr/share/qt4/mkspecs/features/yacc.prf:
+/usr/share/qt4/mkspecs/features/lex.prf:
+/usr/lib/libQtGui.prl:
+/usr/lib/libQtCore.prl:
 qmake:  FORCE
 	@$(QMAKE) -unix -after  CONFIG+=release -o Makefile WASP_dynamic_linker.pro
 
@@ -183,7 +183,7 @@ build/moc_mainwindowimpl.cpp: src/elf.h \
 		src/serial.h \
 		build/ui_mainwindow.h \
 		src/mainwindowimpl.h
-	/usr/local/Trolltech/Qt-4.5.2/bin/moc $(DEFINES) $(INCPATH) src/mainwindowimpl.h -o build/moc_mainwindowimpl.cpp
+	/usr/bin/moc-qt4 $(DEFINES) $(INCPATH) src/mainwindowimpl.h -o build/moc_mainwindowimpl.cpp
 
 compiler_rcc_make_all:
 compiler_rcc_clean:
@@ -196,7 +196,7 @@ compiler_uic_make_all: build/ui_mainwindow.h
 compiler_uic_clean:
 	-$(DEL_FILE) build/ui_mainwindow.h
 build/ui_mainwindow.h: ui/mainwindow.ui
-	/usr/local/Trolltech/Qt-4.5.2/bin/uic ui/mainwindow.ui -o build/ui_mainwindow.h
+	/usr/bin/uic-qt4 ui/mainwindow.ui -o build/ui_mainwindow.h
 
 compiler_yacc_decl_make_all:
 compiler_yacc_decl_clean:
