@@ -1,5 +1,6 @@
 2009/09/30 Luigi Rucco <l.rucco@gmail.com>
-	* Deleted useless files and directories 
+	* Deleted useless files and directories
+	* Souces updates 
 
 2009/09/24 Simone Corbetta <simone.corbetta@gmail.com>
 	* Added documentation support (doxygen)
